--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,22 @@
 {
+  "name": "mmr-frontend",
+  "version": "1.0.0",
+  "private": true,
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
   "dependencies": {
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-router-dom": "^6.23.0",
+    "bootstrap": "^5.3.3",
+    "recharts": "^2.9.0",
     "react-calendar": "^6.0.0"
+  },
+  "devDependencies": {
+    "@vitejs/plugin-react": "^4.2.1",
+    "vite": "^5.2.8"
   }
 }
