--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,12 +8,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "bootstrap": "^5.3.3",
+    "firebase": "^10.14.1",
     "react": "^19.1.0",
+    "react-calendar": "^6.0.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^6.23.0",
-    "bootstrap": "^5.3.3",
-    "recharts": "^2.9.0",
-    "react-calendar": "^6.0.0"
+    "recharts": "^2.9.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.1",
