--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.10.0",
     "bootstrap": "^5.3.3",
     "firebase": "^10.14.1",
     "react": "^19.1.0",
